[package]
name = "roundies"
version = "0.1.0"
edition = "2024"
description = "Telegram bot that converts regular videos into round video messages"

[dependencies]
teloxide = { version = "0.16.0", features = ["macros"] }
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
chrono = "0.4.41"
